# pet

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: gen-video.md
docs/: architecture.md
docs/reference/: provider_adapter.py
docs/schemas/: pet_profile.example.json  script.example.json
pipeline/: config.py  editing.py  narration.py  profile.py  run.py  script_gen.py
providers/: base.py
providers/llm/: ollama_provider.py
providers/tts/: xtts_provider.py
tests/: test_profile.py  test_script_gen.py
