[project]
name = "pet-adoption-video"
version = "0.1.0"
description = "Generate 30s pet adoption short videos from real pet profiles and media (PoC, open-source AI stack)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "coqui-tts>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pipeline", "providers", "providers.llm", "providers.tts"]
